修改文件编码

--- a/rss/index.html
+++ b/rss/index.html
@@ -1,4 +1,4 @@
----
+ï»¿---
 layout: empty
 title: rss
 ---
@@ -17,7 +17,7 @@ title: rss
     <item>
       <title><![CDATA[{{post.title}}]]></title>% if post.origin == nil %}
       <author><![CDATA[<a href="{{site.authorUrl}}">{{site.author}}</a>]]></author>{% else %}
-      <comments><![CDATA[×ªÔØ×Ô£º<a href="{{page.origin}}">{{page.origin}}</a>]]></comments>
+      <comments><![CDATA[è½¬è½½è‡ªï¼š<a href="{{page.origin}}">{{page.origin}}</a>]]></comments>
       <source>{{page.origin}</source>{% endif %}
       <description><![CDATA[{{post.excerpt}}]]></description>
       <link>{{ site.baseUrl }}{{ post.url }}</link>
