--- a/r/rose/index.html
+++ b/r/rose/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Textillate.js</title>
+  <title>测试页面</title>
   <link href="assets/animate.css" rel="stylesheet">
   <link href="assets/style.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
