--- a/r/police/index.html
+++ b/r/police/index.html
@@ -1,13 +1,13 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
+﻿<html><head>
 <title>网警已进入本群</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-<h3 id="-0-_-0-">网警 『0(^_^)0』 已经开始监控本群聊天</h3>
+<h3 id="-0-_-0-" style="
+    color: white;
+">网警 『0(^_^)0』 已经开始监控本群聊天</h3>
 <script>
-	window.location.href="http://www.110.com/zhuanti/wangjingjubaowangzhan/"
+	setTimeout('window.location.href="http://www.110.com/zhuanti/wangjingjubaowangzhan/"',5000);
 </script>
-</body>
-</html>
+
+</body></html>
