--- a/404.html
+++ b/404.html
@@ -10,5 +10,5 @@
 <body><div style="width: 100%;text-align: center;">
 <h1 style="/* display: block; *//* width: 700px; */height: 70px;"><span class="title_inner">404，您访问的页面找不回来了，但我们可以一起帮失踪的宝贝回家！</span></h1>
 </div>
-<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="/" homePageName="回到主页"></script>
+<script type="text/javascript" src="//www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="/" homePageName="回到主页"></script>
 </body></html>
