--- a/404.html
+++ b/404.html
@@ -6,9 +6,8 @@
     <script src="/r/js/html5.js"></script>
     <![endif]-->
     <title>页面找不到了</title>
+    <script src="https://volunteer.cdn-go.cn/404/latest/404.js" rendertarget="404div"></script>
   </head>
-<body><div style="width: 100%;text-align: center;">
-<h1 style="/* display: block; *//* width: 700px; */height: 70px;"><span class="title_inner">404，您访问的页面找不回来了，但我们可以一起帮失踪的宝贝回家！</span></h1>
-</div>
-<script type="text/javascript" src="//www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="/" homePageName="回到主页"></script>
+<body>
+  <div id="404div"></div>
 </body></html>
